--- a/public/styles.css
+++ b/public/styles.css
@@ -3,3 +3,9 @@ body {
     padding: 0;
     background-color: #f5f5f5;
 }
+
+.address-list-item:hover {
+    box-shadow: rgba(0, 0, 0, 0.117647) 1px 3px 6px, rgba(0, 0, 0, 0.117647) 1px 3px 4px !important;
+    position: relative;
+    top: -2px;
+}
